--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,16 @@
             "email": "andre.schuurman_yii2radtools@gmail.com"
         }
     ],
+    "repositories":[
+        {
+            "type": "vcs",
+            "url": "https://github.com/drsdre/yii2-ajaxcrud"
+        },
+    ],
     "require": {
+        "php": ">=7.0.0",
         "yiisoft/yii2": "*",
-        "johnitvn/yii2-ajaxcrud": "~2.1.3",
+        "johnitvn/yii2-ajaxcrud": "dev-master",
         "kartik-v/yii2-dynagrid": "~1.4"
     },
     "autoload": {
